--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -1,8 +1,8 @@
 name: IAST demo using Contrast
 on: push
 
-
 jobs:
+ Build: 
     runs-on: iast_demo_Linux
     steps:
       - uses: actions/checkout@v3
