--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
  Build: 
-    runs-on: iast_demo_Linux
+    runs-on: Linux
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
