--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Building the application
         run: |
-           cd WebGoat
+           cd WebGoat-IAST-Demo
            git checkout main
            ./mvnw clean install
            curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
