--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -10,12 +10,12 @@ jobs:
         run: |
            cd /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
            ./mvnw clean install
-           curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
       
       - name: Install contrast agent
         run: |
+           pwd
            curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
            
       - name: Running and enable Contrast to monitor the appication
         run: |
-           java -javaagent:./contrast.jar -Dcontrast.config.path= /home/sneha/Desktop/contrast_security.yaml -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           java -javaagent:/home/sneha/Desktop/contrast.jar -Dcontrast.config.path= /home/sneha/Desktop/contrast_security.yaml -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
