--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -2,13 +2,15 @@ name: IAST demo using Contrast!!
 on: push
 
 jobs:
- Build: 
-    runs-on: Linux
+ IAST_Security: 
+    #runs-on: Linux
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Building the application
         run: |
-           cd /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
+           #cd /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
+           cd /WebGoat-IAST-Demo/WebGoat-IAST-Demo
            ./mvnw clean install
       
       - name: Install contrast agent
@@ -19,4 +21,5 @@ jobs:
            
       - name: Running and enable Contrast to monitor the appication
         run: |
-           java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           #java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           java -javaagent:/contrast.jar -jar /WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
