--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -6,6 +6,12 @@ jobs:
     #runs-on: Linux
     runs-on: ubuntu-latest 
     steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
+          architecture: x64
       - uses: actions/checkout@v3
       - name: Building the application
         run: |
