--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -30,4 +30,6 @@ jobs:
            #java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
            ls
            pwd
-           sudo java -javaagent:contrast.jar -jar home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           cd target
+           ls
+           sudo java -javaagent: home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/contrast.jar -jar home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
