--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -30,6 +30,7 @@ jobs:
            #java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
            ls
            pwd
-           cd target
+           sudo cp home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/contrast
+           cd contrast
            ls
-           sudo java -javaagent: home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/contrast.jar -jar home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           sudo java -javaagent: contrast.jar -jar webgoat-2023.3.jar
