--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -30,7 +30,7 @@ jobs:
            #java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
            ls
            pwd
-           sudo cp home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar home/runner/work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/contrast
-           cd contrast
+           sudo cp ~/webgoat-2023.3.jar contrast
+           sudo cd contrast
            ls
            sudo java -javaagent: contrast.jar -jar webgoat-2023.3.jar
