--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -3,8 +3,7 @@ on: push
 
 jobs:
  IAST_Security: 
-    #runs-on: Linux
-    runs-on: ubuntu-latest 
+    runs-on: Linux
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -15,22 +14,22 @@ jobs:
       - uses: actions/checkout@v3
       - name: Building the application
         run: |
-           #cd /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
+           cd home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
            pwd
            ./mvnw clean install
       
       - name: Install contrast agent
         run: |
            pwd
-           #cd /home/sneha/Desktop/
+           cd home/sneha/Desktop/
            #curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
            
       - name: Running and enable Contrast to monitor the appication
         run: |
-           #java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
-           ls
-           pwd
-           sudo cp ~/webgoat-2023.3.jar contrast
-           sudo cd contrast
-           ls
-           sudo java -javaagent: contrast.jar -jar webgoat-2023.3.jar
+           java -javaagent: contrast.jar -jar home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           #ls
+           #pwd
+           #sudo cp ~/webgoat-2023.3.jar contrast
+           #sudo cd contrast
+           #ls
+           #sudo java -javaagent: contrast.jar -jar webgoat-2023.3.jar
