--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -21,12 +21,13 @@ jobs:
       - name: Install contrast agent
         run: |
            pwd
-           cd /home/sneha/Desktop/
+           #cd /home/sneha/Desktop/
            #curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
            
       - name: Running and enable Contrast to monitor the appication
         run: |
-           java -javaagent: contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           pwd
+           sudo java -javaagent: /home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
            #ls
            #pwd
            #sudo cp ~/webgoat-2023.3.jar contrast
