--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -5,12 +5,12 @@ jobs:
  IAST_Security: 
     runs-on: Linux
     steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'microsoft'
-          java-version: 17
-          architecture: x64
+      #- name: Set up JDK 17
+       # uses: actions/setup-java@v3
+        #with:
+         # distribution: 'microsoft'
+          #java-version: 17
+          #architecture: x64
       - uses: actions/checkout@v3
       - name: Building the application
         run: |
