--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Running and enable Contrast to monitor the appication
         run: |
            pwd
-           java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           #java -javaagent:/home/sneha/Desktop/contrast.jar -jar /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo/target/webgoat-2023.3.jar
+           java -javaagent:/home/sneha/Desktop/contrast.jar
            #ls
            #pwd
            #sudo cp ~/webgoat-2023.3.jar contrast
