--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -23,13 +23,13 @@ jobs:
            #pwd
            #cd /home/sneha/Desktop/
            #curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
-      - name: Define job start time
-        run: |
-          import time
-          n = int(round(time.time() * 1000))
-          print(f"::set-output name=jobStartTime::{n}")
-        shell: python
-        id: set-job-start-time
+     # - name: Define job start time
+       # run: |
+        #  import time
+        #  n = int(round(time.time() * 1000))
+        #  print(f"::set-output name=jobStartTime::{n}")
+        #shell: python
+        #id: set-job-start-time
       # steps to build and run integration tests
       # - name: Run tests
       #
@@ -42,7 +42,7 @@ jobs:
           authHeader: ${{ secrets.CONTRAST_AUTH_HEADER }}
           appName: WebGoat
           #appId: or app_uuid_here if known
-          jobStartTime: "${{ steps.set-job-start-time.outputs.jobStartTime }}"           
+          #jobStartTime: "${{ steps.set-job-start-time.outputs.jobStartTime }}"           
       - name: Running and enable Contrast to monitor the appication
         run: |
            pwd
