--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -3,18 +3,18 @@ on: push
 
 jobs:
  IAST_Security: 
-    runs-on: Linux
+    runs-on: ubuntu-latest
     steps:
-      #- name: Set up JDK 17
-       # uses: actions/setup-java@v3
-        #with:
-         # distribution: 'microsoft'
-          #java-version: 17
-          #architecture: x64 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'microsoft'
+          java-version: 17
+          architecture: x64 
       - uses: actions/checkout@v3
       - name: Building the application
         run: |
-           cd /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
+           #cd /home/sneha/Downloads/actions-runner/_work/WebGoat-IAST-Demo/WebGoat-IAST-Demo
            pwd
            ./mvnw clean install
       
