--- a/.github/workflows/iast_scan_demo.yml
+++ b/.github/workflows/iast_scan_demo.yml
@@ -19,11 +19,11 @@ jobs:
            ./mvnw spotless:apply
            ./mvnw clean install
       
-      #- name: Install contrast agent
-        #run: |
+      - name: Install contrast agent
+        run: |
            #pwd
            #cd /home/sneha/Desktop/
-           #curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
+           curl -L 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.contrastsecurity&a=contrast-agent&v=LATEST' -o contrast.jar
      # - name: Define job start time
        # run: |
         #  import time
